-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.2.0
-
None
-
Linux Min 18.1 x64 configured with Mint-Y-Dark Theme
-
cd31fd1a60d8e8e266f9b1b095128de5f549171a a45b0d2c05cfe5a704a4371c4bd14696e0c32564
I do not see option to change Debugger and TODO backgrounds which when running on Linux Mint 18.1 with dark theme and Qt Creator Dark Theme makes them hard to read. Please see attached screen shots
For Gerrit Dashboard: QTCREATORBUG-17532 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
181414,4 | Make the debugger console theme aware | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
181457,3 | Make TODO plugin theme aware | master | qt-creator/qt-creator | Status: MERGED | -2 | 0 |
183735,2 | Make TODO plugin theme aware | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |