Make TODO plugin theme aware

Use the theme's colors by default and color the text rather than the
background of items.

Task-number: QTCREATORBUG-17532
Change-Id: I65a2d6da45ce7547b05463a2fb014f8230d0c336
Reviewed-by: Serhii Moroz <frost.asm@gmail.com>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: hjk <hjk@qt.io>