src/plugins/todo/settings.cpp
@@ -28,6 +28,7 @@
 #include "constants.h"
 
 #include <coreplugin/coreconstants.h>
+#include <utils/theme/theme.h>
 
 #include <QSettings>
 
@@ -110,6 +111,7 @@ void Settings::load(QSettings *settings)
 void Settings::setDefault()
 {
     scanningScope = ScanningScopeCurrentFile;
+    Utils::Theme *theme = Utils::creatorTheme();
 
     keywords.clear();
 
@@ -117,27 +119,27 @@ void Settings::setDefault()
 
     keyword.name = QLatin1String("TODO");
     keyword.iconType = IconType::Todo;
-    keyword.color = QColor(QLatin1String(Constants::COLOR_TODO_BG));
+    keyword.color = theme->color(Utils::Theme::OutputPanes_NormalMessageTextColor);
     keywords.append(keyword);
 
     keyword.name = QLatin1String("NOTE");
     keyword.iconType = IconType::Info;
-    keyword.color = QColor(QLatin1String(Constants::COLOR_NOTE_BG));
+    keyword.color = theme->color(Utils::Theme::OutputPanes_NormalMessageTextColor);
     keywords.append(keyword);
 
     keyword.name = QLatin1String("FIXME");
     keyword.iconType = IconType::Error;
-    keyword.color = QColor(QLatin1String(Constants::COLOR_FIXME_BG));
+    keyword.color = theme->color(Utils::Theme::OutputPanes_ErrorMessageTextColor);
     keywords.append(keyword);
 
     keyword.name = QLatin1String("BUG");
     keyword.iconType = IconType::Bug;
-    keyword.color = QColor(QLatin1String(Constants::COLOR_BUG_BG));
+    keyword.color = theme->color(Utils::Theme::OutputPanes_ErrorMessageTextColor);
     keywords.append(keyword);
 
     keyword.name = QLatin1String("WARNING");
     keyword.iconType = IconType::Warning;
-    keyword.color = QColor(QLatin1String(Constants::COLOR_WARNING_BG));
+    keyword.color = theme->color(Utils::Theme::OutputPanes_WarningMessageTextColor);
     keywords.append(keyword);
 
     keywordsEdited = false;
